--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: Run PowerShell script locally
         run: |
-          cd C:\inetpub\wwwroot\ptmkb
+          cd C:\inetpub\wwwroot\ptmkb\webhook_listener
           git pull origin main
-          powershell -ExecutionPolicy Bypass -File C:\path\to\your\script.ps1
+          echo "Hello There!"
+          # powershell -ExecutionPolicy Bypass -File C:\path\to\your\script.ps1
